# goto-eater-csv2geojson

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  geolocation.py  main.py  pyproject.toml
.github/workflows/: publish-docker-image.yml
app/: genre.py  main.py  requirements.txt  util.py
csv/: 09_tochigi_20201109.csv
csv2geojson/: exceptions.py  genre.py  parser.py  util.py
working/: shizuoka_blue_or_red.py
