[tool.poetry]
name = "goto-eater-csv2geojson"
version = "0.1.0"
description = ""
authors = ["KOIZUMI teruaki <1755900+terukizm@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.10"
pandas = "^1.1.4"
logzero = "^1.6.3"
geojson = "^2.5.0"
posuto = "^0.2.1"
validator-collection = "^1.5.0"
w3lib = "^1.22.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.7.0"
taskipy = "^1.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
multi_line_output = 3

[tool.taskipy.tasks]
format = "task black && task isort && task autoflake"
black = "black ."
isort = "isort . --profile black"
autoflake = "autoflake -ri --remove-all-unused-imports --ignore-init-module-imports --remove-unused-variables ."
